--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
         "react-hooks/rules-of-hooks": "error",
         "react-hooks/exhaustive-deps": "off",
         "react/react-in-jsx-scope": "off",
+        "react/prop-types": "off",
         "prettier/prettier": [
             "error",
             { "endOfLine": "auto" }
